--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  date_field: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  firebase_core: ^3.13.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -51,15 +56,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo.png
 
-  # The following line ensures that the Material Icons font is
+  # The following ine ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -73,10 +78,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Adogare
+       fonts:
+         - asset: assets/fonts/Adogare.otf
+     - family: Aluniea
+       fonts:
+         - asset: assets/fonts/AlunieaPersonalUse-Regular.ttf
+     - family: Online
+       fonts:
+         - asset: assets/fonts/Online Shopping.otf
+  uses-material-design: true
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
@@ -87,3 +100,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
